# ESLauncher2

./: .clippy.toml  .gitignore  Cargo.toml  README.md  build.rs  release.toml
.github/: dependabot.yml
.github/packaging/: create-packages.sh  eslauncher2.desktop
.github/workflows/: build.yaml
assets/: .keep  style.css
espim/: Cargo.toml
espim/src/: index.rs  lib.rs  plugin.rs  scan.rs  util.rs
espim/tests/: integration.rs
icons/: ESLauncher2.icns
packaging/: create-packages.sh
src/: advanced_frame.rs  archive.rs  github.rs  init_view.rs  install.rs  install_frame.rs  installation_frame.rs  instance.rs  instances.rs  instances_frame.rs  instances_frame_holder.rs  jenkins.rs  logger.rs  main.rs  music.rs  plugins_frame.rs  settings.rs  style.rs  update.rs  worker.rs
