[package]
name = "eslauncher2"
version = "0.9.9"
authors = ["M*C*O <mcofficer@gmx.de>", "EndlessSkyCommunity"]
edition = "2021"
build = "build.rs"
description = "A plugin and game resource manager for Endless Sky"

[package.metadata.bundle]
name = "ESLauncher2"
identifier = "com.github.EndlessSkyCommunity.ESLauncher2"
icon = ["icons/ESLauncher2.icns"]
resources = ["assets", "icons/**/*.png"]
short_description = "Endless Sky Launcher"
osx_minimum_system_version = "10.7"

[dependencies]
anyhow = "1.0"
bitar = { version = "0.12", features = ["rustls-tls"] }
cp_r = "0.5"
dark-light = "1.0"
dmg = "0.1.2"
espim = "0.2"
flate2 = "1.0"
fs_extra = "1.3.0"
futures = "0.3"
iced_aw = { version = "0.12.2", default-features = false, features = [
    "tabs",
] }
iced_dialog = "0.13.0"
log = { version = "0.4.22", features = ["std"] }
open = "5"
parking_lot = "0.12"
parse_link_header = "0.4"
platform-dirs = "0.3.0"
progress-streams = "1.1.0"
regex = "1"
rodio = { version = "0.19", default-features = false, features = ["vorbis"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
simplelog = "0.12.2"
tar = "0.4"
time = "0.3"
tokio = { version = "1", default-features = false, features = ["fs"] }
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
version = "3"
zip-extract = { version = "0.1.3", default-features = false, features = [
    "deflate",
] }
rfd = { version = "0.14.1", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }

[dependencies.iced]
version = "0.13.1"
default-features = false
features = [
    "web-colors",
    "auto-detect-theme",
    "advanced",
    "image",
    "tokio",
    "wgpu", # iced will use wgpu by default and fall back to tiny-skia
    "tiny-skia",
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
opt-level = 'z' # Optimize for size.
lto = true
