[package]
name = "espim"
version = "0.1.0"
authors = ["M*C*O <mcofficer@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs = "2.0"
serde = { version = "1.0", features = ["derive"] }
zip = {version = "0.5.5", default_features=false, features=["deflate"] }
ureq = { version = "0.12", features = ["tls"], default_features=false }
serde_json = "1.0"

[dev-dependencies]
rand = "0.7"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true