[package]
name = "espim"
version = "0.1.0"
authors = ["M*C*O <mcofficer@gmx.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
dirs = "3.0"
log = "0.4"
serde = { version = "1.0", default_features = false, features = ["derive"] }
ureq = { version = "1.2", default_features = false, features = ["json", "tls"] }
zip-extract = { version = "0.1.0", default_features = false, features = ["deflate"] }

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
